--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 python-dotenv==1.0.0
 geopy==2.4.1
-Flask-CORS==4.0.0 
+Flask-CORS==4.0.0
+Flask-Login==0.6.3
+Werkzeug==3.0.1 
